[package]
name = "tiny-args"
authors = ["hex0x0000 <hex0x0000@protonmail.com>"]
description = "Bare-bones command line argument parser made for Tiny Cloud"
license = "GPL-3.0"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/personal-tiny-cloud/tiny-args"
readme = "README.md"

[dependencies]
owo-colors = "4"
